Fixed h2 on small devices

--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -64,3 +64,9 @@ a {
 .smaller-text{
     font-size:65%;
 }
+
+@media only screen and (max-width: 768px) {
+    h2 {
+        margin-bottom: 0;
+    }
+}
